Added new blog : Introduction to LaCrOS

--- a/Video-rendering-in-chromium(Sequence-diagram)/index.html
+++ b/Video-rendering-in-chromium(Sequence-diagram)/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Life cycle of Video element in chromium(m41) – Abhijeet Kandalkar – C++ developer and Open Source contributor in Webkit/Chromium.</title>
+    <title>Life cycle of Video element in chromium(m41) – Abhijeet Kandalkar – Software Engineer @ Igalia | C++ developer | Open Source contributor in Webkit/Chromium</title>
 
         <meta charset="utf-8" />
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
@@ -11,8 +11,12 @@
     
     <meta name="description" content="Life cycle of Video element:
 
+
+
 " />
     <meta property="og:description" content="Life cycle of Video element:
+
+
 
 " />
     
@@ -28,7 +32,7 @@
     <![endif]-->
 
     <link rel="stylesheet" type="text/css" href="/style.css" />
-    <link rel="alternate" type="application/rss+xml" title="Abhijeet Kandalkar - C++ developer and Open Source contributor in Webkit/Chromium." href="/feed.xml" />
+    <link rel="alternate" type="application/rss+xml" title="Abhijeet Kandalkar - Software Engineer @ Igalia | C++ developer | Open Source contributor in Webkit/Chromium" href="/feed.xml" />
 
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
@@ -41,7 +45,7 @@
 
           <div class="site-info">
             <h1 class="site-name"><a href="/">Abhijeet Kandalkar</a></h1>
-            <p class="site-description">C++ developer and Open Source contributor in Webkit/Chromium.</p>
+            <p class="site-description">Software Engineer @ Igalia | C++ developer | Open Source contributor in Webkit/Chromium</p>
           </div>
 
           <nav>
